--- a/config/rbac/postgresql_admin_role.yaml
+++ b/config/rbac/postgresql_admin_role.yaml
@@ -1,7 +1,7 @@
 # This rule is not used by the project k8s-postgresql-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants full permissions ('*') over instance.alexvyrodov.example.
+# Grants full permissions ('*') over postgresql-operator.vyrodovalexey.github.com.
 # This role is intended for users authorized to modify roles and bindings within the cluster,
 # enabling them to delegate specific permissions to other users or groups as needed.
 
@@ -14,13 +14,13 @@ metadata:
   name: postgresql-admin-role
 rules:
 - apiGroups:
-  - instance.alexvyrodov.example
+  - postgresql-operator.vyrodovalexey.github.com
   resources:
   - postgresqls
   verbs:
   - '*'
 - apiGroups:
-  - instance.alexvyrodov.example
+  - postgresql-operator.vyrodovalexey.github.com
   resources:
   - postgresqls/status
   verbs:
