--- a/config/webhook/kustomization.yaml
+++ b/config/webhook/kustomization.yaml
@@ -2,9 +2,7 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/postgresql-operator.vyrodovalexey.github.com_postgresqls.yaml
-- bases/postgresql-operator.vyrodovalexey.github.com_databases.yaml
-- bases/postgresql-operator.vyrodovalexey.github.com_users.yaml
+- manifests.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patches:
