--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -2,32 +2,49 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    control-plane: controller-manager
+    control-plane: controller
     app.kubernetes.io/name: k8s-postgresql-operator
     app.kubernetes.io/managed-by: kustomize
-  name: system
+  name: k8s-postgresql-operator
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    control-plane: controller
+    app.kubernetes.io/name: k8s-postgresql-operator
+    app.kubernetes.io/managed-by: kustomize
+  name: controller-service
+spec:
+  ports:
+    - name: https
+      port: 443
+      protocol: TCP
+      targetPort: 8443
+  selector:
+    control-plane: controller
+    app.kubernetes.io/name: k8s-postgresql-operator
+
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: controller-manager
-  namespace: system
+  name: controller
   labels:
-    control-plane: controller-manager
+    control-plane: controller
     app.kubernetes.io/name: k8s-postgresql-operator
     app.kubernetes.io/managed-by: kustomize
 spec:
   selector:
     matchLabels:
-      control-plane: controller-manager
+      control-plane: controller
       app.kubernetes.io/name: k8s-postgresql-operator
   replicas: 1
   template:
     metadata:
-      annotations:
-        kubectl.kubernetes.io/default-container: manager
       labels:
-        control-plane: controller-manager
+        control-plane: controller
         app.kubernetes.io/name: k8s-postgresql-operator
     spec:
       # TODO(user): Uncomment the following code to configure the nodeAffinity expression
@@ -60,7 +77,7 @@ spec:
       containers:
       - env:
         - name: VAULT_ADDR
-          value: "http://192.168.0.13:8200"
+          value: "http://192.168.0.36:8200"
         - name: VAULT_ROLE
           value: "k8s-postgresql-operator"
         - name: ENABLE_LEADER_ELECTION
@@ -71,7 +88,11 @@ spec:
           - --health-probe-bind-address=:8081
         image: controller:latest
         name: manager
-        ports: []
+        ports:
+          - containerPort: 8443
+            name: https
+          - containerPort: 8081
+            name: httpprobe
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
@@ -100,5 +121,5 @@ spec:
             memory: 64Mi
         volumeMounts: []
       volumes: []
-      serviceAccountName: controller-manager
+      serviceAccountName: controller
       terminationGracePeriodSeconds: 10
