--- a/config/rbac/postgresql_editor_role.yaml
+++ b/config/rbac/postgresql_editor_role.yaml
@@ -1,7 +1,7 @@
 # This rule is not used by the project k8s-postgresql-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants permissions to create, update, and delete resources within the instance.alexvyrodov.example.
+# Grants permissions to create, update, and delete resources within the postgresql-operator.vyrodovalexey.github.com.
 # This role is intended for users who need to manage these resources
 # but should not control RBAC or manage permissions for others.
 
@@ -14,7 +14,7 @@ metadata:
   name: postgresql-editor-role
 rules:
 - apiGroups:
-  - instance.alexvyrodov.example
+  - postgresql-operator.vyrodovalexey.github.com
   resources:
   - postgresqls
   verbs:
@@ -26,7 +26,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - instance.alexvyrodov.example
+  - postgresql-operator.vyrodovalexey.github.com
   resources:
   - postgresqls/status
   verbs:
