--- a/config/rbac/postgresql_viewer_role.yaml
+++ b/config/rbac/postgresql_viewer_role.yaml
@@ -1,7 +1,7 @@
 # This rule is not used by the project k8s-postgresql-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants read-only access to instance.alexvyrodov.example resources.
+# Grants read-only access to postgresql-operator.vyrodovalexey.github.com resources.
 # This role is intended for users who need visibility into these resources
 # without permissions to modify them. It is ideal for monitoring purposes and limited-access viewing.
 
@@ -14,7 +14,7 @@ metadata:
   name: postgresql-viewer-role
 rules:
 - apiGroups:
-  - instance.alexvyrodov.example
+  - postgresql-operator.vyrodovalexey.github.com
   resources:
   - postgresqls
   verbs:
@@ -22,7 +22,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - instance.alexvyrodov.example
+  - postgresql-operator.vyrodovalexey.github.com
   resources:
   - postgresqls/status
   verbs:
