--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -2,22 +2,19 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: manager-role
+  name: role
 rules:
 - apiGroups:
   - ""
   resources:
-  - secrets
+  - events
   verbs:
-  - get
-  - list
-  - watch
+  - create
+  - patch
 - apiGroups:
-  - instance.alexvyrodov.example
+  - ""
   resources:
-  - databases
-  - postgresqls
-  - users
+  - secrets
   verbs:
   - create
   - delete
@@ -27,7 +24,39 @@ rules:
   - update
   - watch
 - apiGroups:
-  - instance.alexvyrodov.example
+  - admissionregistration.k8s.io
+  resources:
+  - validatingwebhookconfigurations
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - postgresql-operator.vyrodovalexey.github.com
+  resources:
+  - databases
+  - postgresqls
+  - users
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - postgresql-operator.vyrodovalexey.github.com
   resources:
   - databases/finalizers
   - postgresqls/finalizers
@@ -35,7 +64,7 @@ rules:
   verbs:
   - update
 - apiGroups:
-  - instance.alexvyrodov.example
+  - postgresql-operator.vyrodovalexey.github.com
   resources:
   - databases/status
   - postgresqls/status
