--- a/config/rbac/role_binding.yaml
+++ b/config/rbac/role_binding.yaml
@@ -4,12 +4,12 @@ metadata:
   labels:
     app.kubernetes.io/name: k8s-postgresql-operator
     app.kubernetes.io/managed-by: kustomize
-  name: manager-rolebinding
+  name: role
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: manager-role
+  name: role
 subjects:
 - kind: ServiceAccount
-  name: controller-manager
-  namespace: system
+  name: controller
+
