--- a/config/rbac/role_binding_auth.yaml
+++ b/config/rbac/role_binding_auth.yaml
@@ -4,12 +4,12 @@ metadata:
   labels:
     app.kubernetes.io/name: k8s-postgresql-operator
     app.kubernetes.io/managed-by: kustomize
-  name: k8s-postgresql-operator-auth-delegator
+  name: auth-delegator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: system:auth-delegator
 subjects:
 - kind: ServiceAccount
-  name: controller-manager
-  namespace: system
+  name: controller
+
