--- a/config/rbac/service_account.yaml
+++ b/config/rbac/service_account.yaml
@@ -4,5 +4,5 @@ metadata:
   labels:
     app.kubernetes.io/name: k8s-postgresql-operator
     app.kubernetes.io/managed-by: kustomize
-  name: controller-manager
-  namespace: system
+  name: controller
+
