--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -92,7 +92,7 @@ spec:
           - containerPort: 8443
             name: https
           - containerPort: 8081
-            name: httpprobe
+            name: http-probe
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
