--- a/config/samples/database_public.yaml
+++ b/config/samples/database_public.yaml
@@ -4,17 +4,17 @@ metadata:
   labels:
     app.kubernetes.io/name: k8s-postgresql-operator
     app.kubernetes.io/managed-by: kustomize
-  name: database-sample
+  name: database-public-sample
 spec:
   # Database is the name of the PostgreSQL database to create
-  database: "mydatabase"
+  database: "mypublicdatabase"
   
   # Owner is the PostgreSQL user that will own the database
   # This user must exist in PostgreSQL (can be created via User CRD)
   # Make sure to create the user first using the User CRD before creating the database
   owner: "myuser"
 
-  schema: "myschema"
+
   # PostgresqlID is the ID of the PostgreSQL instance where this database should be created
   # This must match the postgresqlID in the Postgresql CRD
   # Example: "2BDAAA95-0465-473B-B270-E5503F1554FD"
