--- a/.golangci.yml
+++ b/.golangci.yml
@@ -66,6 +66,7 @@ linters:
         - whyNoLint
         - wrapperFunc
         - rangeValCopy
+        - hugeParam
     lll:
       line-length: 180
     gocyclo:
@@ -73,10 +74,10 @@ linters:
     nestif:
       min-complexity: 16
     funlen:
-      lines: 100
+      lines: 140
       statements: 90
 
-formatters:
-  enable:
-    - gofmt
-    - goimports
+#formatters:
+#  enable:
+#    - gofmt
+#    - goimports
