--- a/.golangci.yml
+++ b/.golangci.yml
@@ -14,24 +14,27 @@ linters:
     - ineffassign
     - bodyclose
     - noctx
-#    - gosec
+    - gosec
     - unconvert
     - goconst
     - asciicheck
     - goheader
     - lll
-#    - unparam
+    - unparam
     - dogsled
     - nakedret
     - prealloc
     - gocritic
-#    - whitespace
+    - whitespace
     - goprintffuncname
     - testpackage
     - nestif
     - sqlclosecheck
     - gocyclo
     - funlen
+    - asciicheck
+    - bidichk
+    - bodyclose
   exclusions:
     generated: lax
     presets:
@@ -44,8 +47,15 @@ linters:
       - vendor
       - third_party
       - ".*generate\\.go$"
-
+    rules:
+      - linters:
+          - gosec
+        text: 'G(201):'
   settings:
+    errcheck:
+      exclude-functions:
+        - fmt.Fprintf
+        - fmt.Fprint
     goconst:
       min-len: 2
       min-occurrences: 3
@@ -57,20 +67,13 @@ linters:
         - performance
         - style
       disabled-checks:
-        - unnecessaryDefer
-        - appendAssign
-        - importShadow
-        - sloppyReassign
-        - ifElseChain
-        - octalLiteral
-        - whyNoLint
         - wrapperFunc
-        - rangeValCopy
-        - hugeParam
-        - sprintfQuotedString
-        - nestingReduce
         - paramTypeCombine
-    lll:
+      settings:
+        hugeParam:
+          sizeThreshold: 512
+        rangeValCopy:
+          sizeThreshold: 512
       line-length: 300
     gocyclo:
       min-complexity: 25
