--- a/config/crd/bases/postgresql-operator.vyrodovalexey.github.com_databases.yaml
+++ b/config/crd/bases/postgresql-operator.vyrodovalexey.github.com_databases.yaml
@@ -42,6 +42,18 @@ spec:
               database:
                 description: Database is the name of the PostgreSQL database to create
                 type: string
+              dbTemplate:
+                description: |-
+                  DBTemplate is the name of an existing database to use as a template when creating this database
+                  If specified, the new database will be created as a copy of the template database
+                type: string
+              deleteFromCRD:
+                default: false
+                description: |-
+                  DeleteFromCRD indicates whether the database should be deleted from PostgreSQL when the CRD is deleted
+                  If true, the database will be removed from PostgreSQL when the Database CRD is deleted
+                  Default is false
+                type: boolean
               owner:
                 description: Owner is the PostgreSQL user that will own the database
                 type: string
