refactor unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,8 @@ go.work
 # Kubernetes Generated files - skip generated files, except for vendored files
 !vendor/**/zz_generated.*
 
-# editor and IDE paraphernalia
+# editor, robots, and IDE paraphernalia
+.opencode
 .idea
 .vscode
 *.swp
